@@ -89,6 +89,7 @@ export(isForbidden)
 export(isInteger)
 export(isLogical)
 export(isNumeric)
+export(isRequiresOk)
 export(makeDiscreteLearnerParam)
 export(makeDiscreteParam)
 export(makeDiscreteVectorLearnerParam)
