@@ -7,6 +7,8 @@ ParamHelpers_1.5:
 - added property 'tunable' to make*Param
 - isFeasible supports named lists for unordered checks
 - filterParams can now filter based on 'ids' and 'tunable'
+- new functions
+-- isRequiresOk
 
 ParamHelpers_1.4:
 - sampleValue(s): 'discrete.names' now only affects discrtete params and not logicals anymore.
